@@ -60,6 +60,11 @@ Changes in backwards compatibility policy
 * LUCENE-3712: Removed unused and untested ReaderUtil#subReader methods.
   (Uwe Schindler)
   
+* LUCENE-3672: Deprecate Directory.fileModified,
+  IndexCommit.getTimestamp and .getVersion and
+  IndexReader.lastModified and getCurrentVersion (Andrzej Bialecki,
+  Robert Muir, Mike McCandless)
+   
 Security fixes
 
 * LUCENE-3588: Try harder to prevent SIGSEGV on cloned MMapIndexInputs:
